2.0.20
======
- Fixed NPE at the Themes utility class when using the SpringStandardDialect with a WebContext implementation
  (not SpringWebContext)


2.0.19
======
- Applied annotation-based autowiring to custom Thymeleaf View classes even when they were not declared as a bean
  at the application context.
- Implemented size() and isEmpty() in "beans" map in context variables.


2.0.18
======
- (No changes)


2.0.17
======
- Added a "#themes.code('key')" expression object which looks up and returns the value of
  'key' in the current Spring theme's properties file.  This is the equivalent of Spring's
  <spring:theme code='key'> JSP tag.
- Fixed <input> tags with no "type" attribute not being treated as type="text" (which they should).
- Fixed form error messages output with th:errors not being escaped and provoking a parsing error
  if they contained <, >, &, etc.


2.0.16
======
- Automatically add @PathVariable's to model when using Spring 3.1 or newer. 
- Forbidden the inclusion of request parameter variables ('param.*') in preprocessing expressions
  and th:utext attribute values.


2.0.15
======
- Made "beans" context variable not override a variable with the same name, if such variable comes
  from the model.
- Fixed: Added "SpringTemplateEngine.setTemplateEngineMessageSource(...)" for letting users really 
  specify a MessageSource to be used by thymeleaf overriding the one automatically set by Spring.


2.0.14
======
- Refactored SpelEvaluationContext to act as a decorator (requirement for thymeleaf-extras-springsecurity3).


2.0.13
======
- (No changes)


2.0.12
======
- Fixed "viewClass" property in ThymeleafViewResolver requiring an implementation of
  ThymeleafView instead of AbstractThymeleafView.
- Added AjaxEnabledView interface for views that include an "ajaxHandler" property.


2.0.11
======
- Add "getFragmentSpec()" / "setFragmentSpec(IFragmentSpec)" methods to ThymeleafView in order to 